--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "csv-parse": "^6.1.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "openai": "^5.10.2"
+    "openai": "^5.10.2",
+    "xlsx": "^0.18.5"
   }
 }
